# llama-hud

./: CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md
src/: app.rs  config.rs  log_tailer.rs  main.rs  parser.rs  prometheus.rs  slots_poller.rs  theme.rs  widgets.rs
