[package]
name = "llama-hud"
version = "0.1.6"
edition = "2024"
description = "btop-style terminal dashboard for llama-server"
license = "MIT"
repository = "https://github.com/mscheurwater/llama-hud"
homepage = "https://github.com/mscheurwater/llama-hud"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
strip = true
opt-level = 3
